<resources>
    <string name="app_name">Logistica</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="device1">A086DD273532AA15DD4D5A83D2A6880E</string>
    <string name="device2">4A2790CC2F2F210B9805A86F1289FEAF</string>
    <string name="Required">Required</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="perfil_usuarios">Usuarios</string>
    <string name="perfil_productos">Productos</string>
    <string name="perfil_clientes">Clientes</string>
    <string name="perfil_reportes">Reportes</string>
    <string name="perfil_ordenes">Ordenes</string>
    <string name="perfil_preparar">Preparar</string>
    <string name="perfil_entregar">Entregar</string>
    <string name="perfil_pagos">Pagos</string>
    <string name="perfil_stock">Stock</string>
    <string name="productToast">Products</string>
    <string name="CustomToast">Customs</string>
    <string name="AddInternalError">Internal Error</string>
    <string name="AddInvalidReques">Invalid Reques</string>
    <string name="AddNetworkError">Network Error</string>
    <string name="AddNoFill">No Fillr</string>
    <string name="AddonFailedToLoad">on onAdFailedToLoad (%S)</string>
    <string name="MakeCall_Choose">Choose a number</string>
    <string name="NomberTypeOtro">Otro</string>
    <string name="NomberTypeMain">MAIN</string>
    <string name="NomberTypeFaxWork">FAX WORK</string>
    <string name="NomberTypeWork">WORK</string>
    <string name="NomberTypeMovile">MOVILE</string>
    <string name="NomberTypeHome">HOME</string>
    <string name="MakeCall_Tel">tel:</string>
    <string name="products">Products</string>
    <string name="customs">Customs</string>
    <string name="reportesXcliente">Reporte x Cliente</string>
    <string name="reportesXMes">Reporte x Mes</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_empresa">Empresas</string>
    <string name="menu_empresaList">Lista de Empresas</string>
    <string name="menu_usuariosList">Lista de Usuarios</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_custom_orders">Custom Orders</string>
    <string name="title_picking">Picking</string>
    <string name="title_delivery">Delivery</string>
    <string name="empty_product_list">No Products to display</string>
    <string name="empty_pickingOrder_list">No Picking Orders to display</string>
    <string name="empty_custom_Order_list">No Custom Orders to display</string>
    <string name="product_name_text">Name:</string>
    <string name="product_name_error_tooLong">Too Long:</string>
    <string name="product_name_error_yaexiste">Already Exisit</string>
    <string name="product_name_error_cantBeNull">Can not be null</string>
    <string name="product_price_text">Price:</string>
    <string name="enter_price_message">Enter Price</string>
    <string name="price_error_cantBeNull">Can not be null</string>
    <string name="price_error_mustBegraterthan0">must be grater than cero</string>
    <string name="price_error_cantBeCero">Can no be cero </string>
    <string name="product_priceSpecal_text">Special Price:</string>
    <string name="enter_priceSpecia_message">Enter Special Price</string>
    <string name="product_photo_text">Picture</string>
    <string name="product_description_text">Description:</string>
    <string name="product_description_hint_text">Product Description</string>
    <string name="detail_icon_transition_name" translatable="false">TN_DetailName</string>
    <string name="detail_icon_transition_price" translatable="false">TN_DetailPrice</string>
    <string name="detail_icon_transition_imagen" translatable="false">TN_DetailIcon</string>
    <string name="pruductDetailBar_NEW_PRODUCT" translatable="false">New Product</string>
    <string name="theproducNametExist" translatable="true">The product already Exist</string>
    <string name="theproducNametcantbenull" translatable="true">The product can not be null</string>
    <string name="theproductNameToLong" translatable="true">The product name is too long</string>
    <string name="theproductdesccantbenull" translatable="true">Description can not be null</string>
    <string name="theproductdescToLong" translatable="true">Descrition name is too long</string>
    <string name="priceError" translatable="true">The price must be > 0 </string>
    <string name="title_custom_list">Customs</string>
    <string name="title_custom_detail">Custom Detail</string>
    <string name="custom_Id_text">Custom</string>
    <string name="custom_new">New Customer </string>
    <string name="custom_name_text">Name:</string>
    <string name="custom_name_text_hint_text">Name</string>
    <string name="custom_last_text">Lastname:</string>
    <string name="custom_last_hint_text">lastname</string>
    <string name="custom_photo_text">Contacto Agendado</string>
    <string name="custom_photo">custom photo</string>
    <string name="custom_delivery_address_text">Delivey Address:</string>
    <string name="custom_delivery_address_hint_text">Delivey Address:</string>
    <string name="custom_city_text">City:</string>
    <string name="custom_city_hint_text">City</string>
    <string name="custom_Special_text">Special</string>
    <string name="custom_Cuit_text">Cuit:</string>
    <string name="custom_Cuit_hint_text">00-00000000-0</string>
    <string name="custom_IVA_text">Iva:</string>
    <string name="custom_IVA_hint_text">% del impuesto</string>
    <string name="custom_icon_transition_name" translatable="false">TN_CustomName</string>
    <string name="custom_icon_transition_surname" translatable="false">TN_CustomSurname</string>
    <string name="custom_icon_transition_imagen" translatable="false">TN_CustomIcon</string>
    <string name="custom_DetailBar_NEW_PRODUCT" translatable="false">New Product</string>
    <string name="empty_custom_list">No Customers to Show</string>
    <string name="empty_picking_list">No Picking Order to Show</string>
    <string name="empty_delivery_list">No Delivery Order to Show</string>
    <string name="title_customorder_list">CustomOrders</string>
    <string name="title_customorder_detail">CustomOrder Detail</string>
    <string name="selectPickingOrderToAssing">Select a Picking order to this order</string>
    <string name="doYouWantDelete">Do you want to delete?</string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>
    <string name="title_New_Order">New Order</string>
    <string name="title_Order_Number">Order: </string>
    <string name="favoriteAlreadyExisist">Favorite already Exists </string>
    <string name="doYouWantToChange">Do you want to change it? </string>
    <string name="quantityPicker">Select Quantity</string>
    <string name="TotalCantidad">cantidad: </string>
    <string name="MontoTotal">Monto Total:</string>
    <string name="MontoTotalDelivey">Monto Total Delivery:</string>
    <string name="InformeErrorApplyingBatchInsert">Informe Error applying batch insert</string>
    <string name="InformeError">Error: </string>
    <string name="customOrder_Id_text">Custom Order Number:</string>
    <string name="customOrder_new">New Custom Order</string>
    <string name="customOrder_text">Name:</string>
    <string name="customOrder_text_hint_text">Name</string>
    <string name="customOrder_last_text">Lastname:</string>
    <string name="customOrder_last_hint_text">Lastename</string>
    <string name="BotonSeleccionCliente">Customer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="contentDescription_customPhoto">Custom Photo</string>
    <string name="contentDescription_butonMakeAcall">Button: Make a Call</string>
    <string name="contentDescription_butonShare">Button: Share</string>
    <string name="contentDescription_PhotoProduct">Product Photo</string>
    <string name="file">file:</string>
    <string name="Product_">Product_</string>
    <string name="yyyyMMdd_HHmmss">yyyyMMdd_HHmmss</string>
    <string name="data">data</string>
    <string name="PickingOrderNumber"> Picking Order: </string>
    <string name="dialogNumebrPickerCancel">Cancel</string>
    <string name="dialogNumebrPickerSet">Set</string>
    <string name="NumberPicker">Number Picker</string>
    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="title_activity_custom_selection">Select a Customer</string>
    <string name="boton_select_customer">Select a Customer</string>
    <string name="boton_select_product">Select a Product</string>
    <string name="boton_conectPrinter">Conectar Impresora</string>
    <string name="boton_Print">Imprimir</string>
    <string name="NewOrder">New Order</string>
    <string name="custom_card_order_number">ORDER: </string>
    <string name="custom_card_empty_custom_list">No Customers to Display </string>
    <string name="pickng_card_order_number">PICKING ORDER</string>
    <string name="picking_card_empty_custom_list">No Pincking Order to Display </string>
    <string name="picking_card_Text_Coment">Enter your comment </string>
    <string name="picking_card_saveButton_contentDescription">Save Button</string>
    <string name="favorito">Favorite</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="detete_picking_order">Do you want delete this Picking Order?</string>
    <string name="detete_picking_order_cancel">Cancel</string>
    <string name="detete_picking_order_ok">OK</string>
    <string name="detete_picking_order_Existen_CustomOrders_Asigned">There are Custom Orders Asigned</string>
    <string name="detete_picking_order_NO_Existen_CustomOrders_Asigned">There are NO Custom Orders Asigned</string>
    <string name="product">Porduct:   </string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="description">Product Descrition:   </string>
    <string name="photo">Product Picture</string>
    <string name="productTitle">Product header</string>
    <string name="priceTitle">Price header</string>
    <string name="quantityTitle">quantity header</string>
    <string name="totalTitle">total header</string>
    <string name="deliverPrice">price</string>
    <string name="deliverqantity">quantiny for deliver</string>
    <string name="deliverPricetotalTitle">total Price</string>
    <string name="specialPriceTitle">Special Price header</string>
    <string name="productListItem">Product</string>
    <string name="priceListItem">Price</string>
    <string name="SpecialpriceListItem">Special Price</string>
    <string name="photoListItem">Product Picture</string>
    <string name="productTitleListItem">Product header</string>
    <string name="priceTitleListItem">Price header</string>
    <string name="specialPriceTitleListItem">Special Price header</string>
    <string name="Orders">Orders</string>
    <string name="usuario_email">Email</string>
    <string name="usuario_emailConfirmacion">Conrfirmar Email</string>
    <string name="cantidad_text">Cantidad: </string>
    <string name="product_precio_perfil">Perfil</string>
    <string name="product_precio_precio">Precio</string>
    <string name="product_precio_precio_especial">Precio Especial</string>
</resources>