<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nextnut.logistica.MainActivity">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <item android:id="@+id/productos"
        android:icon="@drawable/ic_action_action_redeem"
        android:title="@string/products"
        app:showAsAction="always"/>
    <item android:id="@+id/customs"
        android:icon="@drawable/ic_action_image_timer_auto"
        android:title="@string/customs"
        app:showAsAction="always"/>
    <item android:id="@+id/reportexCliente"
        android:orderInCategory="110"
        android:title="@string/reportesXcliente"
        app:showAsAction="never"/>
    <item android:id="@+id/reportexMes"
        android:orderInCategory="110"
        android:title="@string/reportesXMes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_empresa"
        android:title="@string/menu_empresa"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_empresaList"
        android:title="@string/menu_empresaList"
        android:visible="true"
        app:showAsAction="never" />


<!-- Revisar iconos -->
</menu>
