<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/product_cardViewMarginLeft"
    android:layout_marginStart="@dimen/product_cardViewMarginLeft"
    android:layout_marginRight="@dimen/product_cardViewMarginRight"
    android:layout_marginEnd="@dimen/product_cardViewMarginRight"
    android:layout_marginTop="@dimen/product_cardViewtMarginTop"
    android:layout_marginBottom="@dimen/product_cardViewMarginBottom"
    android:elevation="@dimen/Poduct_cardViewElevation"
    android:clickable="true"
    android:focusable="true"
    card_view:cardBackgroundColor="@color/ProductCard_background"

    android:foreground="?selectableItemBackground">

<LinearLayout
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >
    <!--android:divider="#FFCC00-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="@dimen/text_margin"
        >

    <ImageView
        android:id="@+id/photoProducto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/photo"
        android:maxHeight="@dimen/product_cardPhotoheigth"
        android:maxWidth="@dimen/product_cardPhotowidth"

        android:transitionName="@string/detail_icon_transition_name"
        android:layout_gravity="center"
     />
        </LinearLayout>
    <!--android:layout_margin="@dimen/text_margin"-->
    <!--android:maxHeight="96dp"-->
    <!--android:maxWidth="96dp"-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_margin="@dimen/text_margin"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >
            <!--<TextView-->
                <!--android:text="@string/product"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="start"-->
                <!--android:gravity="start"-->
                <!--android:textStyle="bold"/>-->

    <TextView
        android:id="@+id/nombreProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="start"
        android:contentDescription="@string/productTitle"
        android:layout_weight="1"/>


            <!--android:layout_margin="@dimen/text_margin"-->

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/favorito"
                android:contentDescription="@string/favorito"
                android:id="@+id/favorito"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:contentDescription="@string/priceTitle"
                android:layout_weight="1"/>
            <!--android:layout_margin="@dimen/text_margin"-->
            <TextView
                android:text="@string/quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:textStyle="bold"
                android:contentDescription="@string/quantityTitle"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_weight="1"
                />


            <TextView
                android:text="@string/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_weight="1"
                android:contentDescription="@string/totalTitle"
                />
            <!--android:layout_margin="@dimen/text_margin"-->
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <TextView
            android:id="@+id/precioProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:contentDescription="@string/product"
            android:layout_weight="1"/>
            <!--android:layout_margin="@dimen/text_margin"-->
        <TextView
            android:id="@+id/cantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:contentDescription="@string/quantity"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_weight="1"
            />


        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"

            android:layout_weight="1"
            />
            <!--android:layout_margin="@dimen/text_margin"-->
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/precioProductoDelivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/deliverPrice"

                android:layout_gravity="center_vertical"
                android:gravity="start"

                android:layout_weight="1"/>
            <!--android:layout_margin="@dimen/text_margin"-->
            <TextView
                android:id="@+id/cantidadDelivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:textStyle="bold"
                android:background="@drawable/edittext_bg"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_weight="1"
                android:contentDescription="@string/deliverqantity"
                />


            <TextView
                android:id="@+id/totalDelivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:contentDescription="@string/deliverPricetotalTitle"
                android:layout_weight="1"
                />
            <!--android:layout_margin="@dimen/text_margin"-->
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--&gt;-->

        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:textStyle="bold"
            android:contentDescription="@string/description"
            />
        <TextView
            android:id="@+id/descriptionProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"


            />
        <!--android:layout_margin="@dimen/text_margin"-->

        <!--</LinearLayout>-->
        </LinearLayout>



</LinearLayout>

    </android.support.v7.widget.CardView>


