<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="@dimen/product_cardViewMarginLeft"
    android:layout_marginStart="@dimen/product_cardViewMarginLeft"
    android:layout_marginRight="@dimen/product_cardViewMarginRight"
    android:layout_marginEnd="@dimen/product_cardViewMarginRight"
    android:layout_marginTop="@dimen/product_cardViewtMarginTop"
    android:layout_marginBottom="@dimen/product_cardViewMarginBottom"
    card_view:cardBackgroundColor="@color/ProductCard_background"

    android:elevation="@dimen/Poduct_cardViewElevation"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

<LinearLayout
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:gravity="start"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/product_precio_perfil"
                android:layout_width="0dp"
                android:layout_weight="2"

                android:gravity="start"
                android:layout_height="wrap_content"
                android:contentDescription="@string/productTitleListItem"
                android:layout_gravity="start"
                android:textStyle="bold"
                 />

            <!--android:layout_weight="1"-->

            <TextView
                android:text="@string/product_precio_precio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/priceTitleListItem"
                android:layout_gravity="start"
                android:textStyle="bold"
                />

            <TextView
                android:text="@string/product_precio_precio_especial"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:contentDescription="@string/specialPriceTitleListItem"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                />
            <!--android:layout_weight="1"-->
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

    <TextView
        android:id="@+id/productoPrecioPerfil"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:contentDescription="@string/product_precio_perfil"
        android:layout_gravity="center_vertical"

        />
            <!--android:layout_weight="1"-->

    <TextView
        android:id="@+id/productoprecioPrecio"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:contentDescription="@string/priceListItem"
        android:layout_gravity="center_vertical"

        />

            <TextView
                android:id="@+id/productoprecioPrecioEspecial"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:contentDescription="@string/SpecialpriceListItem"
                android:layout_gravity="center_vertical"

                />
            <!--android:layout_weight="1"-->
        </LinearLayout>


    </LinearLayout>

</LinearLayout>

    </android.support.v7.widget.CardView>


